--- a/pages/portfolio/css/portfolio.scss
+++ b/pages/portfolio/css/portfolio.scss
@@ -1,36 +1,88 @@
-@import '../../../common/_vars';
-@import '../../../common/_mixins';
+@import "../../../ancillary-styles/_vars";
+@import "../../../ancillary-styles/_mixins";
+@import "../../../ancillary-styles/_common.styles";
 
-
-@import '../../../common/_common.styles';
-@import '../../../blocks/_upper-header';
-
-@import '../../../blocks/_card';
-
-@import '../../../blocks/_socials';
-@import '../../../blocks/_footer';
-
+@import "../../../common-blocks/header-upper/_header-upper";
+@import "../../../common-blocks/_card";
+@import "../../../common-blocks/_socials";
+@import "../../../common-blocks/_footer";
 
 .header {
-  
   .header__lower {
     padding-top: 210px;
-    border-bottom: 1px solid rgba(000, 000, 000, .3);
+    border-bottom: 1px solid rgba(000, 000, 000, 0.3);
+  }
+
+  @media screen and (max-width: 1024px) {
+    .header__lower {
+      padding-top: 100px;
+    }
+  }
+
+  @media screen and (max-width: 450px) {
+    .header__lower {
+      padding-top: 50px;
+    }
   }
 
   .header__title {
     margin-left: 400px;
-    font-weight: bold;
-    font-size: 57px;
-    line-height: 42px;
+    @include font(700, 3.5rem);
+    line-height: 80%;
+    text-transform: capitalize;
+  }
+
+  @media screen and (max-width: 1024px) {
+    .header__title {
+      font-size: 2rem;
+    }
+  }
+
+  @media screen and (max-width: 700px) {
+    .header__title {
+      margin-left: 80px;
+    }
+  }
+
+  @media screen and (max-width: 450px) {
+    .header__title {
+      font-size: 1.5rem;
+    }
   }
 }
 
 .projects {
-
   .projects__nav {
     padding-top: 70px;
     padding-bottom: 55px;
+  }
+
+  @media screen and (max-width: 1250px) {
+    .projects__nav {
+      padding-left: 40px;
+      padding-right: 40px;
+    }
+  }
+
+  @media screen and (max-width: 1024px) {
+    .projects__nav {
+      padding-top: 35px;
+      padding-bottom: 30px;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    .projects__nav {
+      padding-left: 80px;
+      padding-right: 80px;
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    .projects__nav {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
   }
 
   .projects__menu {
@@ -39,18 +91,20 @@
 
   .projects__menu-item {
     text-transform: capitalize;
-    transition: .2s color ease;
+    transition: 0.2s color ease;
   }
 
   .projects__menu-item:hover {
     color: $accent-color;
     cursor: pointer;
-    transition: .2s color ease;
+    transition: 0.2s color ease;
   }
 
   .projects__menu-item:not(:last-child) {
     margin-right: 45px;
   }
+
+  // ================================= grid
 
   .projects__lower {
     display: grid;
@@ -59,63 +113,165 @@
     grid-gap: 60px;
   }
 
+  @media screen and (max-width: 1919px) {
+    .projects__lower {
+      grid-auto-rows: minmax(500px, auto);
+      grid-gap: 40px;
+    }
+  }
+
+  @media screen and (max-width: 1350px) {
+    .projects__lower {
+      grid-auto-rows: minmax(400px, auto);
+      grid-gap: 30px;
+    }
+  }
+
+  @media screen and (max-width: 1024px) {
+    .projects__lower {
+      grid-template-columns: repeat(2, 1fr);
+      // grid-auto-rows: minmax(400px, auto);
+      grid-gap: 40px;
+
+      padding-left: 40px;
+      padding-right: 40px;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    .projects__lower {
+      grid-template-columns: repeat(1, 1fr);
+      grid-gap: 40px;
+
+      padding-left: 80px;
+      padding-right: 80px;
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    .projects__lower {
+      // grid-template-columns: repeat(1, 1fr);
+      grid-gap: 20px;
+
+      grid-auto-rows: minmax(200px, auto);
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+  }
+
+  // ================================= grid/
+
   .projects__card {
     background-color: #fff;
+  }
+
+  @media screen and (max-width: 450px) {
+    .projects__card {
+      padding-bottom: 100px;
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    .projects__card-title {
+      margin-bottom: 20px;
+    }
+  }
+
+  @media screen and (max-width: 450px) {
+    .projects__card-title {
+      font-size: 1.2rem;
+    }
   }
 
   .projects__card-category {
     color: $accent-color;
   }
 
-  .projects__card:first-child {
-    background: url('/images/portfolio/bedroom.jpg') no-repeat;
+  @media screen and (max-width: 450px) {
+    .projects__card-category {
+      font-size: 0.7rem;
+    }
+  }
+
+  .projects__card--first {
+    background: url("../../../images/pages/portfolio-page/bedroom.jpg") center
+      center no-repeat;
     background-size: cover;
   }
 
-  .projects__card:nth-child(2) {
-    background: url('/images/portfolio/hall.jpg') no-repeat;
+  .projects__card--second {
+    background: url("../../../images/pages/portfolio-page/hall.jpg") center
+      center no-repeat;
     background-size: cover;
   }
 
-  .projects__card:nth-child(3) {
+  .projects__card--third {
     grid-row: 1 / 3;
     grid-column: 3 / 3;
-    background: url('/images/portfolio/yard.jpg') no-repeat;
+    background: url("../../../images/pages/portfolio-page/yard.jpg") center
+      center no-repeat;
     background-size: cover;
   }
 
-  .projects__card:nth-child(4) {
-    grid-column: 1 / 1;
+  @media screen and (max-width: 1024px) {
+    .projects__card--third {
+      grid-row: auto;
+      grid-column: auto;
+    }
+  }
+
+  .projects__card--fourth {
     grid-row: 2 / 4;
-    background: url('/images/portfolio/sofa.jpg') no-repeat;
+    grid-column: 1 / 1;
+    background: url("../../../images/pages/portfolio-page/sofa.jpg") center
+      center no-repeat;
     background-size: cover;
   }
 
-  .projects__card:nth-child(5) {
-    background: url('/images/portfolio/houses.jpg') no-repeat;
+  @media screen and (max-width: 1024px) {
+    .projects__card--fourth {
+      grid-row: auto;
+      grid-column: auto;
+    }
+  }
+
+  .projects__card--fifth {
+    background: url("../../../images/pages/portfolio-page/houses.jpg") center
+      center no-repeat;
     background-size: cover;
   }
 
-  .projects__card:nth-child(6) {
-    background: url('/images/portfolio/white-houses.jpg') no-repeat;
+  .projects__card--sixth {
+    background: url("../../../images/pages/portfolio-page/white-houses.jpg")
+      center center no-repeat;
     background-size: cover;
   }
 
-  .projects__card:nth-child(7) {
-    background: url('/images/portfolio/building.jpg') no-repeat;
+  .projects__card--seventh {
+    background: url("../../../images/pages/portfolio-page/building.jpg") center
+      center no-repeat;
     background-size: cover;
   }
 
-  .projects__card:nth-child(8) {
-    background: url('/images/portfolio/hall.jpg') no-repeat;
+  .projects__card--eighth {
+    background: url("../../../images/pages/portfolio-page/hall.jpg") center
+      center no-repeat;
     background-size: cover;
   }
 
-  .projects__card:last-child {
-    grid-column: 2 / 4;
+  .projects__card--nineth {
     grid-row: 4 / 4;
-    background: url('/images/portfolio/divan.jpg') no-repeat 0 -230px;
+    grid-column: 2 / 4;
+    background: url("../../../images/pages/portfolio-page/divan.jpg") center
+      center no-repeat;
     background-size: cover;
+  }
+
+  @media screen and (max-width: 1024px) {
+    .projects__card--nineth {
+      grid-row: auto;
+      grid-column: auto;
+    }
   }
 
   .card:hover {
@@ -138,9 +294,27 @@
     align-items: center;
   }
 
+  @media screen and (max-width: 1200px) {
+    .projects__card-link {
+      width: 60px;
+      height: 60px;
+    }
+  }
+
+  @media screen and (max-width: 1350px) {
+    .projects__card-link {
+      bottom: 40px;
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    .projects__card-link {
+      bottom: 20px;
+    }
+  }
+
   .projects__card-link::after {
-    content: url(/images/portfolio/arrow.png);
-    margin-left: -7px;
+    content: url("../../../images/pages/portfolio-page/arrow.png");
   }
 }
 
